--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "dev:ssr": "ng run chrislb:serve-ssr",
     "serve:ssr": "node dist/chrislb/server/main.js",
     "build:ssr": "ng build && ng run chrislb:server",
-    "prerender": "ng run chrislb:prerender"
+    "prerender": "ng run chrislb:prerender",
+    "lint": "ng lint",
+    "format-check": "prettier --check",
+    "format-check-all": "npm run format-check -- .",
+    "format": "prettier --ignore-unknown --write",
+    "format-all": "npm run format -- ."
   },
   "private": true,
   "dependencies": {
@@ -31,18 +36,28 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.6",
+    "@angular-eslint/builder": "16.2.0",
+    "@angular-eslint/eslint-plugin": "16.2.0",
+    "@angular-eslint/eslint-plugin-template": "16.2.0",
+    "@angular-eslint/schematics": "16.2.0",
+    "@angular-eslint/template-parser": "16.2.0",
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@nguniversal/builders": "^16.2.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.0.3",
     "typescript": "~5.1.3"
   }
 }
