--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,6 @@ app/**/*.js.map
 node_modules/
 bower_components/
 
-# IDEs and editors
-.idea/
-
 # misc
 .sass-cache/
 connect.lock/
@@ -59,7 +56,8 @@ e2e/*.map
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -239,3 +237,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/angular,vim,visualstudiocode,npm,webstorm+iml,macos,linux,windows,lighthouseci
+# Manual edit
+# - Remove .idea from Angular. We want some IDE settings!
