--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.15.2",
     "gardevoir": "^1.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^10.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
