--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@nguniversal/express-engine": "^16.2.0",
+    "compression": "^1.7.4",
     "express": "^4.15.2",
     "gardevoir": "^1.0.0",
     "rxjs": "~7.8.0",
@@ -46,6 +47,7 @@
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@nguniversal/builders": "^16.2.0",
+    "@types/compression": "^1.7.4",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.7",
