--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "format-check": "prettier --check",
     "format-check-all": "npm run format-check -- .",
     "format": "prettier --ignore-unknown --write",
-    "format-all": "npm run format -- ."
+    "format-all": "npm run format -- .",
+    "generate-images-list": "ts-node scripts/generate-images-list.mts",
+    "create-env-from-sample": "cp .env.sample .env"
   },
   "private": true,
   "dependencies": {
@@ -54,8 +56,10 @@
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
+    "imagekit": "^4.1.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -64,6 +68,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-mocks": "^14.11.0",
     "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
   }
 }
