--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format-check-all": "npm run format-check -- .",
     "format": "prettier --ignore-unknown --write",
     "format-all": "npm run format -- .",
-    "generate-images-list": "ts-node scripts/generate-images-list.mts",
+    "generate-image-lists": "ts-node scripts/src/generate-image-lists.mts",
     "create-env-from-sample": "cp .env.sample .env"
   },
   "private": true,
