--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:public": "ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -15,7 +16,9 @@
     "format-check": "prettier --check",
     "format-check-all": "npm run format-check -- .",
     "format": "prettier --ignore-unknown --write",
-    "format-all": "npm run format -- ."
+    "format-all": "npm run format -- .",
+    "generate-image-lists": "ts-node scripts/src/generate-image-lists.mts",
+    "create-env-from-sample": "cp .env.sample .env"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +32,7 @@
     "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@nguniversal/express-engine": "^16.2.0",
+    "compression": "^1.7.4",
     "express": "^4.15.2",
     "gardevoir": "^1.0.0",
     "rxjs": "~7.8.0",
@@ -46,13 +50,16 @@
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@nguniversal/builders": "^16.2.0",
+    "@types/compression": "^1.7.4",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
+    "imagekit": "^4.1.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -61,6 +68,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-mocks": "^14.11.0",
     "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "~5.1.3"
   }
 }
