--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fontsource/fira-sans": "^5.0.17",
     "@nguniversal/express-engine": "^16.2.0",
     "compression": "^1.7.4",
     "express": "^4.15.2",
