--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,14 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets", "src/robots.txt"],
+            "assets": [
+              "src/assets",
+              "src/browserconfig.xml",
+              "src/favicon.ico",
+              "src/favicon.png",
+              "src/robots.txt",
+              "src/site.webmanifest"
+            ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/sass"]
             },
@@ -91,7 +98,14 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets", "src/robots.txt"],
+            "assets": [
+              "src/assets",
+              "src/browserconfig.xml",
+              "src/favicon.ico",
+              "src/favicon.png",
+              "src/robots.txt",
+              "src/site.webmanifest"
+            ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/sass"]
             },
