--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,8 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/apple-touch-icon.png",
+              "src/apple-touch-icon-precomposed.png",
               "src/assets",
               "src/browserconfig.xml",
               "src/favicon.ico",
@@ -99,6 +101,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/apple-touch-icon.png",
+              "src/apple-touch-icon-precomposed.png",
               "src/assets",
               "src/browserconfig.xml",
               "src/favicon.ico",
