--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,7 +2,7 @@
   {
     "id": "chiasma",
     "title": "CHIASMA",
-    "subtitle": "Final graduate collection",
+    "subtitle": "Final graduate collections",
     "quote": "Crossing path of two organic structures, usually the bridge in the recombination process",
     "description": [
       "The collection explores hybrid identity. Chiasma means “crossing of two structures”. It shows my personal experience as a second generation immigrant who has grown up between two different cultures. My latin heritage, being born in Peru, and being raised in Spain, has led me to develop an ego that combines these two worlds in one. This experience, which is shared by many people nowadays, is redefining new identities and social principles. This project brings to the surface these experiences by exploring different acculturation profiles that are known in the process of cultural adaptation and identity development.",
