feat(projects): add project detail page

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "id": "chiasma",
+    "slug": "chiasma",
     "title": "CHIASMA",
     "subtitle": "Final graduate collection",
     "quote": "Crossing path of two organic structures, usually the bridge in the recombination process",
