feat(projects): detail view improvements

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -20,6 +20,28 @@
         "nickname": "flama.ph"
       }
     ],
-    "hasDetails": true
+    "hasDetails": true,
+    "lookbooks": [
+      {
+        "slug": "ego",
+        "name": "Ego"
+      },
+      {
+        "slug": "defiant",
+        "name": "Defiant"
+      },
+      {
+        "slug": "moratorium",
+        "name": "Moratorium"
+      },
+      {
+        "slug": "foreclosure",
+        "name": "Foreclosure"
+      },
+      {
+        "slug": "diffusion",
+        "name": "Diffusion"
+      }
+    ]
   }
 ]
