feat(projects): many things

--- a/src/data/images/projects-preview.json
+++ b/src/data/images/projects-preview.json
@@ -3,92 +3,107 @@
     {
       "name": "chiasma_101.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_101.jpg",
-      "height": 6240,
-      "width": 4160
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_102.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_102.jpg",
-      "height": 3120,
-      "width": 2080
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_103.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_103.jpg",
-      "height": 1872,
-      "width": 1248
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_104.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_104.jpg",
-      "height": 1872,
-      "width": 1248
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_105.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_105.jpg",
-      "height": 1872,
-      "width": 1248
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_106.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_106.jpg",
-      "height": 1872,
-      "width": 1248
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_107.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_107.jpg",
-      "height": 2808,
-      "width": 1872
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_108.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_108.jpg",
-      "height": 2496,
-      "width": 1664
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_109.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_109.jpg",
-      "height": 1872,
-      "width": 1248
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_110.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_110.jpg",
-      "height": 1872,
-      "width": 1248
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_111.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_111.jpg",
-      "height": 1872,
-      "width": 1248
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_112.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_112.jpg",
-      "height": 3120,
-      "width": 2080
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_113.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_113.jpg",
-      "height": 3120,
-      "width": 2080
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_114.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_114.jpg",
-      "height": 3120,
-      "width": 2080
+      "height": 3240,
+      "width": 2160,
+      "alt": ""
     },
     {
       "name": "chiasma_115.jpg",
       "filePath": "/projects/chiasma/preview/chiasma_115.jpg",
-      "height": 3058,
-      "width": 2080
+      "height": 3240,
+      "width": 2204,
+      "alt": ""
     }
   ]
 }
