--- a/src/data/images/projects-lookbooks.json
+++ b/src/data/images/projects-lookbooks.json
@@ -1,272 +1,272 @@
 {
-  "chiasma": [
-    [
+  "chiasma": {
+    "ego": [
       {
         "name": "lookbook01.jpg",
-        "filePath": "/projects/chiasma/lookbooks/1/lookbook01.jpg",
+        "filePath": "/projects/chiasma/lookbooks/01-ego/lookbook01.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook02.jpg",
-        "filePath": "/projects/chiasma/lookbooks/1/lookbook02.jpg",
+        "filePath": "/projects/chiasma/lookbooks/01-ego/lookbook02.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook03.jpg",
-        "filePath": "/projects/chiasma/lookbooks/1/lookbook03.jpg",
+        "filePath": "/projects/chiasma/lookbooks/01-ego/lookbook03.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook04.jpg",
-        "filePath": "/projects/chiasma/lookbooks/1/lookbook04.jpg",
+        "filePath": "/projects/chiasma/lookbooks/01-ego/lookbook04.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook05.jpg",
-        "filePath": "/projects/chiasma/lookbooks/1/lookbook05.jpg",
+        "filePath": "/projects/chiasma/lookbooks/01-ego/lookbook05.jpg",
         "height": 1560,
         "width": 1040
       }
     ],
-    [
+    "defiant": [
       {
         "name": "lookbook06.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook06.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook06.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook07.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook07.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook07.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook08.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook08.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook08.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook09.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook09.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook09.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook10.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook10.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook10.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook11.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook11.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook11.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook12.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook12.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook12.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook13.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook13.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook13.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook14.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook14.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook14.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook15.jpg",
-        "filePath": "/projects/chiasma/lookbooks/2/lookbook15.jpg",
+        "filePath": "/projects/chiasma/lookbooks/02-defiant/lookbook15.jpg",
         "height": 1560,
         "width": 1040
       }
     ],
-    [
+    "moratorium": [
       {
         "name": "lookbook16.jpg",
-        "filePath": "/projects/chiasma/lookbooks/3/lookbook16.jpg",
+        "filePath": "/projects/chiasma/lookbooks/03-moratorium/lookbook16.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook17.jpg",
-        "filePath": "/projects/chiasma/lookbooks/3/lookbook17.jpg",
+        "filePath": "/projects/chiasma/lookbooks/03-moratorium/lookbook17.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook18.jpg",
-        "filePath": "/projects/chiasma/lookbooks/3/lookbook18.jpg",
+        "filePath": "/projects/chiasma/lookbooks/03-moratorium/lookbook18.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook19.jpg",
-        "filePath": "/projects/chiasma/lookbooks/3/lookbook19.jpg",
+        "filePath": "/projects/chiasma/lookbooks/03-moratorium/lookbook19.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook20.jpg",
-        "filePath": "/projects/chiasma/lookbooks/3/lookbook20.jpg",
+        "filePath": "/projects/chiasma/lookbooks/03-moratorium/lookbook20.jpg",
         "height": 1560,
         "width": 1040
       }
     ],
-    [
+    "foreclosure": [
       {
         "name": "lookbook21.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook21.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook21.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook22.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook22.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook22.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook23.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook23.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook23.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook24.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook24.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook24.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook25.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook25.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook25.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook26.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook26.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook26.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook27.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook27.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook27.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook28.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook28.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook28.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook29.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook29.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook29.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook30.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook30.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook30.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook31.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook31.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook31.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook32.jpg",
-        "filePath": "/projects/chiasma/lookbooks/4/lookbook32.jpg",
+        "filePath": "/projects/chiasma/lookbooks/04-foreclosure/lookbook32.jpg",
         "height": 1560,
         "width": 1040
       }
     ],
-    [
+    "diffusion": [
       {
         "name": "lookbook33.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook33.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook33.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook34.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook34.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook34.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook35.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook35.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook35.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook36.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook36.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook36.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook37.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook37.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook37.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook38.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook38.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook38.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook39.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook39.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook39.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook40.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook40.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook40.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook41.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook41.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook41.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook42.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook42.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook42.jpg",
         "height": 1560,
         "width": 1040
       },
       {
         "name": "lookbook43.jpg",
-        "filePath": "/projects/chiasma/lookbooks/5/lookbook43.jpg",
+        "filePath": "/projects/chiasma/lookbooks/05-diffusion/lookbook43.jpg",
         "height": 1560,
         "width": 1040
       }
     ]
-  ]
+  }
 }
