--- a/src/data/pages/projects.json
+++ b/src/data/pages/projects.json
@@ -1,5 +1,6 @@
 {
   "name": "Projects",
+  "slug": "projects",
   "title": "",
   "description": "Fashion designer and stylist, @christian_labu",
   "keywords": [
