--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,6 +4,7 @@ backend:
   branch: main
 publish_mode: editorial_workflow
 media_folder: 'src/assets/cms'
+public_folder: '/assets/cms'
 site_url: https://christianlazaro.es
 display_url: https://github.com/davidlj95/chrislb
 logo_url: https://christianlazaro.es/favicon.svg
