feat(cms): add label prefix for PRs

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   repo: davidlj95/chrislb
   branch: main
+  cms_label_prefix: decap-cms/
 publish_mode: editorial_workflow
 media_folder: 'src/assets/cms'
 public_folder: '/assets/cms'
