--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: davidlj95/chrislb
   branch: main
+  # 👇 To be in sync with Cloudflare Pages deploy previews
+  preview_context: 'deploy/preview'
   cms_label_prefix: decap-cms/
 publish_mode: editorial_workflow
 media_folder: 'src/assets/cms'
