--- a/.github/workflows/reusable-deploy-cloudflare-pages.yml
+++ b/.github/workflows/reusable-deploy-cloudflare-pages.yml
@@ -80,6 +80,7 @@ jobs:
         with:
           retries: 3
           script: |
+            console.log('SHA is', context.sha);
             const result = await github.rest.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
