Update Page “projects”

--- a/src/data/pages/projects.json
+++ b/src/data/pages/projects.json
@@ -2,7 +2,7 @@
   "name": "Projects",
   "slug": "projects",
   "title": "",
-  "description": "Fashion designer and stylist, @christian_labu",
+  "description": "Fashion designer and stylist @christian_labu",
   "keywords": [
     "fashion design",
     "stylist",
