--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -43,16 +43,14 @@ collections:
     extension: 'json'
     create: false
     delete: false
-    slug: '{{slug}}'
-    editor:
-      preview: false
+    slug: '{{fields.slug}}'
     identifier_field: 'slug'
     preview_path: '{{slug}}'
+    summary: '{{name}}'
     fields:
       - label: 'Name'
         name: 'name'
         widget: 'string'
-        pattern: ['.{1,}', 'Must have at least 1 character']
         hint: 'Identifies the page in the content manager. But nothing a visitor would see'
       - label: 'Slug'
         name: 'slug'
@@ -67,10 +65,10 @@ collections:
         name: 'title'
         widget: 'string'
         hint: 'This will appear in page titles in browser tabs / windows. Including the site name. Something like: "<Page title> - <Site name>". For instance: "About | Christian Lazaro". Leave it empty to show site name only'
+        required: false
       - label: 'Description'
         name: 'description'
         widget: 'string'
-        pattern: ['.{1,}', 'Must have at least 1 character']
       - label: 'Keywords'
         name: 'keywords'
         widget: 'list'
@@ -80,7 +78,6 @@ collections:
           label: 'Keyword'
           name: 'keyword'
           widget: 'string'
-          pattern: ['.{1,}', 'Must have at least 1 character']
       - label: 'Image'
         name: 'image'
         widget: 'object'
@@ -93,7 +90,6 @@ collections:
           - label: 'Alternative text'
             name: 'alt'
             widget: 'string'
-            pattern: ['.{1,}', 'Must have at least 1 character']
           - label: 'Width'
             name: 'width'
             widget: 'number'
