feat(cms): moar features :) (#50)
* feat(cms): add public folder setting

* feat(cms): add label prefix for PRs

* ci: set deploy status so decap CMS can read it

* ci: do not require performance for preview deploy

* ci: show deploy status result

* ci: show result of deploy status (missing return)

* ci: try printing result (again)

* ci: log sha

* ci: add description to deploy status

* feat(cms): use slug as filename + field fix, title opt

* build: ignore generated JSONs from formatting

* ci: remove sha printing from deploy status

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -30,7 +30,7 @@ jobs:
       LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
   deploy-preview:
     name: Deploy preview
-    needs: [build, lint, test, performance]
+    needs: [build, lint, test]
     uses: ./.github/workflows/reusable-deploy-cloudflare-pages.yml
     # Cannot run on PRs from forked repos right now.
     # https://developers.cloudflare.com/pages/platform/known-issues/
@@ -45,3 +45,4 @@ jobs:
     permissions:
       contents: read
       deployments: write
+      statuses: write
