feat(cms): fix and improve deploy links

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,6 +9,7 @@ jobs:
     uses: ./.github/workflows/reusable-build.yml
     permissions:
       contents: write
+      statuses: write
     with:
       artifact-name: build
   test:
