--- a/.github/workflows/reusable-build.yml
+++ b/.github/workflows/reusable-build.yml
@@ -11,6 +11,10 @@ on:
         required: false
         default: ''
 
+permissions:
+  # 👇 For Decap CMS commit status
+  statuses: write
+
 jobs:
   build:
     name: Build and prerender app
@@ -21,6 +25,10 @@ jobs:
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
         with:
           ref: ${{ inputs.ref }}
+      - name: Notify deploy preview will come
+        uses: ./.github/actions/deploy-preview-status
+        with:
+          state: 'pending'
       - name: Setup
         uses: ./.github/actions/setup
       - name: Cache Angular build
