--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,6 +6,13 @@ backend:
   preview_context: 'deploy/preview'
   cms_label_prefix: decap-cms/
   squash_merges: true
+  commit_messages:
+    create: 'feat(contents): create {{collection}} “{{slug}}”'
+    update: 'feat(contents): update {{collection}} “{{slug}}”'
+    delete: 'feat(contents): delete {{collection}} “{{slug}}”'
+    uploadMedia: 'feat(media): upload “{{path}}”'
+    deleteMedia: 'feat(media): delete “{{path}}”'
+    openAuthoring: '{{message}}'
 publish_mode: editorial_workflow
 media_folder: 'src/assets/cms'
 public_folder: '/assets/cms'
