ci: fix permissions issue with deploy preview workflow

--- a/.github/workflows/reusable-deploy-cloudflare-pages.yml
+++ b/.github/workflows/reusable-deploy-cloudflare-pages.yml
@@ -16,7 +16,7 @@ permissions:
   contents: read
   deployments: write
   # 👇 For Decap CMS commit status. PRs only
-  # statuses: write
+  statuses: write
 
 concurrency:
   group: cloudflare-pages-${{ github.ref }}
