--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -48,6 +48,8 @@ collections:
             pattern: ['^https:\/\/.*', 'Must start with https://']
   - name: 'pages'
     label: 'Pages'
+    # 👇 Apparently only used in commit messages / PR titles
+    # So lowercase is better for those contexts
     label_singular: 'page'
     folder: 'src/data/pages'
     extension: 'json'
@@ -128,6 +130,7 @@ collections:
     create: true
     slug: '{{fields.slug}}'
     identifier_field: 'slug'
+    summary: '{{title}}'
     fields:
       - label: 'Slug'
         name: 'slug'
