feat(cms): change markdown to text widget type

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -153,7 +153,7 @@ collections:
         required: false
       - label: 'Description'
         name: 'description'
-        widget: 'markdown'
+        widget: 'text'
       - label: 'Credits'
         name: 'credits'
         widget: 'list'
