feat(projects): use authors for credits (#64)
* feat(projects): use authors for credits

* refactor(projects): field slug to authorSlug in credits

* refactor(projects): remove name and nickname from credits

* feat(cms): link credit to author

* chore: remove local backend config

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -157,18 +157,19 @@ collections:
       - label: 'Credits'
         name: 'credits'
         widget: 'list'
+        summary: '{{fields.role}}: {{fields.authorSlug}}'
         required: false
         fields:
-          - label: 'Name'
-            name: 'name'
-            widget: 'string'
           - label: 'Role'
             name: 'role'
             widget: 'string'
-          - label: 'Nickname'
-            name: 'nickname'
-            widget: 'string'
-            hint: 'Without the @. Links to instagram profile'
+          - label: 'Author'
+            name: 'authorSlug'
+            widget: 'relation'
+            collection: 'authors'
+            search_fields: ['name', 'social.instagram']
+            value_field: '{{slug}}'
+            display_fields: ['{{name}} ({{social.instagram}})']
   - name: 'authors'
     label: 'Authors'
     label_singular: 'author'
