--- a/.gitignore
+++ b/.gitignore
@@ -376,9 +376,11 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/angular,vim,visualstudiocode,node,webstorm+iml,macos,linux,windows,lighthouseci,dotenv
-src/data/*-list.json
-src/data/images/*.json
+src/content/*.json
+src/content/**/*-images.json
+src/data/*.json
 src/data/**/*-images.json
+src/data/images/*.json
 # Manual edit
 # - Remove .idea from Angular. We want some IDE settings!
 # - Add generated JSON lists
